--- a/less/howTo.less
+++ b/less/howTo.less
@@ -27,7 +27,7 @@ body{
                 }
                 button{
                     margin-top: 10%;
-                    margin-bottom: 10%;
+                    margin-bottom: 7%;
                     width: 75%;
                     font-size: 1.5rem;
                     border-radius: 5px;
@@ -37,14 +37,19 @@ body{
                     padding: 2.5%;
                     border: none;
                 }
-                h2{
-                    color:#444;
-                }
-                a{
-                    color:#0090c5;
-                    text-decoration: underline;
-                    line-height: 2rem;
-                    font-size: 1rem;
+                .centerText{
+                    text-align: center;
+                    margin-right: 25%;
+                        h2{
+                            color:#444;
+                            margin-bottom: 7.5%;
+                        }
+                        a{
+                            color:#0090c5;
+                            text-decoration: underline;
+                            line-height: 2rem;
+                            font-size: 1rem;
+                        }
                 }
             }
 
