--- a/howTo.css/howTo.css
+++ b/howTo.css/howTo.css
@@ -45,13 +45,12 @@ body .howToContainer .howToFlex .leftColumn .centerText {
 body .howToContainer .howToFlex .leftColumn .centerText .howToPictures {
   display: flex;
   flex-flow: row wrap;
+  height: 5%;
+  width: 5%;
 }
 body .howToContainer .howToFlex .leftColumn .centerText .howToPictures a {
-  width: 49%;
-}
-body .howToContainer .howToFlex .leftColumn .centerText .howToPictures a img {
-  width: 90%;
-  height: 150px;
+  width: 5%;
+  height: 5%;
 }
 body .howToContainer .howToFlex .leftColumn .centerText h2 {
   color: #444;
@@ -73,7 +72,7 @@ body .howToContainer .howToFlex .rightColumn h1 {
 }
 body .howToContainer .howToFlex .rightColumn p {
   font-size: 1.2rem;
-  line-height: 1.9rem;
+  line-height: 2.5rem;
 }
 body .howToContainer .howToFlex .rightColumn h2 {
   color: #444;
