--- a/less/howTo.less
+++ b/less/howTo.less
@@ -40,6 +40,22 @@ body{
                 .centerText{
                     text-align: center;
                     margin-right: 25%;
+                    
+                    .howToPictures{
+                            display: flex;
+                            flex-flow: row wrap;
+                            a{
+                                width: 49%;
+
+                                img{
+                                    width: 90%;
+                                    height: 150px;
+                                }
+                            }
+
+                        }   
+
+                    
                         h2{
                             color:#444;
                             margin-bottom: 7.5%;
@@ -64,7 +80,7 @@ body{
                 }
                 p{
                     font-size: 1.2rem;
-                    line-height: 2.5rem;
+                    line-height: 1.90rem;
                 }
                 h2{
                     color:#444;
