--- a/css/howTo.css
+++ b/css/howTo.css
@@ -73,7 +73,8 @@ body .howToContainer .howToFlex .rightColumn h1 {
 }
 body .howToContainer .howToFlex .rightColumn p {
   font-size: 1.2rem;
-  line-height: 1.9rem;
+  line-height: 2rem;
+  margin: 3% 0 0% 0%;
 }
 body .howToContainer .howToFlex .rightColumn h2 {
   color: #444;
