--- a/less/howTo.less
+++ b/less/howTo.less
@@ -80,7 +80,8 @@ body{
                 }
                 p{
                     font-size: 1.2rem;
-                    line-height: 1.90rem;
+                    line-height: 2rem;
+                    margin: 3% 0 0% 0%;
                 }
                 h2{
                     color:#444;
