--- a/less/howTo.less
+++ b/less/howTo.less
@@ -58,6 +58,7 @@ body{
                     
                         h2{
                             color:#444;
+                            margin-top: 2%;
                             margin-bottom: 7.5%;
                         }
                         a{
@@ -74,7 +75,6 @@ body{
                 flex-flow: column nowrap;
                 width: 60%;
                 
-
                 h1{
                     color:#444;
                 }
@@ -85,6 +85,7 @@ body{
                 }
                 h2{
                     color:#444;
+                    margin: 4% 0% 2% 0%;
                 }
             }
         }
